pipeline/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ta
  name: ta
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: ta
    weight: 100
